# sebastian

./: README.md  config.example.yml  pyproject.toml
documentation/: TECHNICAL_PREREQUISITE_GUIDANCE.md
sebastian/core/: config.py  logger.py  utils.py
sebastian/interfaces/: api.py  client.py
