[tool.poetry]
name = "sebastian"
version = "0.1.0"
description = ""
authors = ["UNB Libraries <libsystems@unb.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ctranslate2 = "4.4.0"
filelock = "3.16.1"
flask = "3.1.0"
huggingface-hub = "0.27.1"
nvidia-cudnn-cu11 = "8.9.6.50"
protobuf = "5.29.3"
psutil = "5.9.8"
pyyaml = "6.0.2"
requests = "2.32.3"
torch = "2.3.1"
torchaudio = "2.3.1"
waitress = "3.0.2"
whisperx = {version = "^3.3.1", python=">=3.12,<3.13"}

[tool.poetry.scripts]
"api:start" = "sebastian.interfaces.api:start"
"transcribe" = "sebastian.interfaces.client:transcribe"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
